@@ -1,0 +1,7 @@
+ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
+update_config=1
+country=FR
+##STARTNW
+##ENDNW
+##STARTN2
+##ENDN2
